# ml-project-template

./: .gitignore  README.md  README.ru.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_template.py
tests/fixtures/: contexts.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.ru.md  docker-compose.yml  dvc.yaml  mkdocs.yml  params.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  docs.yml  release.yml
{{cookiecutter.project_slug}}/configs/: config.yaml
{{cookiecutter.project_slug}}/configs/data/: default.yaml
{{cookiecutter.project_slug}}/configs/experiment/: baseline.yaml  sota.yaml
{{cookiecutter.project_slug}}/configs/model/: default.yaml
{{cookiecutter.project_slug}}/configs/trainer/: default.yaml
{{cookiecutter.project_slug}}/docs/: api.md  index.md  model_card.md.j2  serving.md
{{cookiecutter.project_slug}}/notebooks/: 01_eda.ipynb  02_demo.ipynb
{{cookiecutter.project_slug}}/scripts/: export_hf_native.py  publish_to_hf.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/data/: __init__.py  datamodule.py  dataset.py  transforms.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/evaluation/: evaluate.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/inference/: predict.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/models/: __init__.py  factory.py  lightning_module.py  metrics.py  sklearn_pipeline.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/serving/: dependencies.py  errors.py  main.py  routes.py  schemas.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/training/: train.py
{{cookiecutter.project_slug}}/tests/: test_data.py  test_inference.py  test_model.py  test_serving.py  test_training.py
