[project]
name = "ml-project-template"
version = "0.1.0"
description = "Cookiecutter template for production-grade ML projects"
requires-python = ">=3.12"
authors = [{ name = "Daniil Kiselyov" }]
license = { text = "MIT" }

[dependency-groups]
dev = [
  "cookiecutter>=2.6.0",
  "pytest>=8.0.0",
  "pytest-cookies>=0.7.0",
  "pyyaml>=6.0",
  "ruff>=0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
