[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
license = { text = "{{ cookiecutter.license }}" }
readme = "README.md"

dependencies = [
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pyyaml>=6.0.1",
  "structlog>=24.1.0",
  "rich>=13.7.0",
{% if cookiecutter.framework == "pytorch" -%}
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "lightning>=2.2.0",
  "torchmetrics>=1.3.0",
{% if cookiecutter.task_type == "nlp" -%}
  "transformers>=4.40.0",
  "tokenizers>=0.19.0",
  "datasets>=2.18.0",
{% endif -%}
{% if cookiecutter.task_type == "keypoints" -%}
  "ultralytics>=8.3.0",
  "pycocotools>=2.0.7",
{% endif -%}
{% endif -%}
{% if cookiecutter.framework == "sklearn" -%}
  "scikit-learn>=1.4.0",
  "lightgbm>=4.3.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "shap>=0.44.0",
  "joblib>=1.3.0",
{% endif -%}
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.3.0",
  "mypy>=1.9.0",
  "pre-commit>=3.6.0",
  "nbqa>=1.8.0",
  "nbstripout>=0.7.0",
  "ipykernel>=6.29.0",
  "matplotlib>=3.8.0",
]
{% if cookiecutter.has_serving == "true" -%}
serving = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "huggingface-hub>=0.22.0",
{% if cookiecutter.framework == "pytorch" -%}
  "pillow>=10.2.0",
{% endif -%}
]
{% endif -%}
tracking = [
  "mlflow>=2.11.0",
  "dvc>=3.48.0",
  "wandb>=0.16.0",
]
docs = [
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[tool.ruff]
line-length = 100
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "N"]
ignore = ["N812"]

[tool.ruff.lint.per-file-ignores]
"src/{{ cookiecutter.package_name }}/serving/routes.py" = ["B008"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

{% if cookiecutter.framework == "pytorch" -%}
[[tool.mypy.overrides]]
module = "{{ cookiecutter.package_name }}.serving.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "{{ cookiecutter.package_name }}.data.datamodule"
ignore_errors = true
{% endif -%}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term --cov-report=xml --cov-fail-under=10"

[tool.coverage.run]
source = ["src/{{ cookiecutter.package_name }}"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
